src/styles/app.css
:root {
  --clr-primary: hsl(211, 39%, 33%);
  --clr-secondary: hsl(49, 88%, 43%);
  --clr-neutral: hsl(32, 81%, 96%);
  --clr-accent: hsl(46, 100%, 56%);
} 

*, 
*::before, 
*::after {
  box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

body {
    line-height: 1.5;
    letter-spacing: 0.5px;
    min-height: 100svh;
}
  
ol, ul {
  list-style: none;
}
  
h1, h2, h3, h4, h5 {
  font-size: inherit;
  font-weight: inherit;
}
  
img {
  display: block;
  max-inline-size: 100%;
}

body {
  font-family: 'Play', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  color: var(--clr-neutral);
  background-color: var(--clr-primary);
}

.app-header {
  display: grid;
  justify-items: center;
  padding-block: 1em 2em;
}

.title {
  font-size: 2em;
  font-weight: 600;
  font-family: 'Gugi', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.score {
  font-size: 1.5em;
}

.modal {
    position: absolute;
    inset: 0;
    display: grid;
    justify-items: center;
    align-items: center;
    background-color: hsl(46, 100%, 56%, .1);
}

.modal-content {
    color: var(--clr-secondary);
    background-color: var(--clr-neutral);
    text-align: center;
    padding: 1em 3em;
    margin-inline: 1rem;
    border-radius: 1em;
    box-shadow: 0 0 1rem var(--clr-secondary);
    cursor: context-menu;
    animation: pop 300ms ease-in-out;
}

.modal-text {
    font-size: 2em;
    position: relative;
}

.modal-score {
    font-size: 3em;
}

@keyframes pop {
  0% {
    transform: scale(.7);
    opacity: .2;
  }
  50% {
    transform: scale(1.2);
    opacity: 1;
  }
  100% {
    transform: scale(1);
  }
}

.footer-content {
  display: grid;
  justify-items: center;
  margin-top: 5rem;
  padding: 2rem;
  background-color: var(--clr-secondary);
}

.footer-content a {
  color: var(--clr-primary);
  text-underline-offset: 2px;
}

.footer-content a:hover {
  color: var(--clr-accent);
  text-decoration: none;
}

